--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,22 @@ dependencies {
     implementation files('libs/library.jar')
     implementation files('libs/pinyin4j-2.5.0.jar')
 
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.google.code.gson:gson:2.2.4'
+
     // room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    // 引导层
+    implementation 'com.github.huburt-Hu:NewbieGuide:v2.4.0'
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    // eventBus
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    // 分包
+    implementation 'com.android.support:multidex:1.0.1'
+    // 状态栏
+    implementation 'com.gyf.immersionbar:immersionbar:2.3.3'
+
 }
