--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,10 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:2.3.3'
     // BaseAdapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    // RxPermission
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 }
