调整：文件夹音乐列表页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
 
         <activity android:name=".activity.WelcomeActivity" />
 
+        <activity android:name=".activity.FolderWithMusicListActivity" />
     </application>
 
 </manifest>
