--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation files('libs/core.jar')
-    implementation files('libs/library.jar')
-    implementation files('libs/pinyin4j-2.5.0.jar')
+
+    implementation 'com.android.support:support-v4:29.0.0'
 
     implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
