--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-permission android:name="com.paulniu.iyingmusic.permission.ACCESS_PLAY_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 屏幕常亮 -->
+
+    <permission
+        android:name="com.paulniu.iyingmusic.permission.ACCESS_PLAY_SERVICE"
+        android:protectionLevel="normal" />
 
     <application
         android:name=".App"
@@ -19,7 +25,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.FirstActivity">
+        <activity android:name=".activity.FirstActivity"
+            android:theme="@style/AppTheme.First">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +34,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.TestActivity" />
+        <activity android:name=".activity.TestActivity"
+            android:alwaysRetainTaskState="true"
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme"/>
 
         <activity android:name=".activity.MainActivity" />
 
@@ -38,6 +48,19 @@
         <activity android:name=".activity.WelcomeActivity" />
 
         <activity android:name=".activity.FolderWithMusicListActivity" />
+
+        <!--  音乐播放服务  -->
+        <service android:name=".service.SongPlayService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.paulniu.iyingmusic.permission.ACCESS_PLAY_SERVICE"
+            android:process=":playService">
+            <intent-filter>
+                <action android:name="com.paulniu.iyingmusic.action.PLAY_SERVICE" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
