--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.FirstActivity"
+        <activity
+            android:name=".activity.FirstActivity"
             android:theme="@style/AppTheme.First">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,23 +40,33 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.TestActivity"
+        <!--测试页面-->
+        <activity
+            android:name=".activity.TestActivity"
             android:alwaysRetainTaskState="true"
             android:launchMode="singleTask"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
 
         <activity android:name=".activity.MainActivity" />
 
+        <!--本地音乐扫描页面-->
         <activity android:name=".activity.MusicScanActivity" />
 
+        <!--设置页面-->
         <activity android:name=".activity.SettingActivity" />
 
+        <!--首次安装欢迎页面-->
         <activity android:name=".activity.WelcomeActivity" />
 
+        <!--文件夹详情页面(文件夹中音乐列表)-->
         <activity android:name=".activity.FolderWithMusicListActivity" />
 
+        <!--音乐详情页面-->
+        <activity android:name=".activity.MusicDetailActivity" />
+
         <!--  音乐播放服务  -->
-        <service android:name=".service.SongPlayService"
+        <service
+            android:name=".service.SongPlayService"
             android:enabled="true"
             android:exported="true"
             android:permission="com.paulniu.iyingmusic.permission.ACCESS_PLAY_SERVICE"
